# mtc-cms

./: .dockerignore  .env.example  .gitignore  BUILD.md  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  compose.yaml  package.json  tailwind.config.js
mtc-api/: Cargo.toml
mtc-api/src/: main.rs  paginator.rs  routes.rs  state.rs
mtc-api/src/error/: api_error.rs  db_error.rs  generic_error.rs  mod.rs  session_error.rs
mtc-api/src/handler/: api_handler.rs  auth_handler.rs  group_handler.rs  health_handler.rs  migration_handler.rs  mod.rs  permissions_handler.rs  role_handler.rs  schema_handler.rs  setup_handler.rs  storage_handler.rs  store_handler.rs  user_handler.rs
mtc-api/src/middleware/: auth_middleware.rs
mtc-api/src/model/: access_model.rs  api_model.rs  auth_model.rs  field_model.rs  group_model.rs  mod.rs  pagination_model.rs  permission_model.rs  request_model.rs  response_model.rs  role_model.rs  schema_model.rs  single_type_model.rs  user_model.rs
mtc-api/src/provider/: config_provider.rs  database_provider.rs  logger_provider.rs  mod.rs  redirect_provider.rs
mtc-api/src/repository/: api_repository.rs  group_repository.rs  mod.rs  permissions_repository.rs  role_repository.rs  schema_repository.rs  single_type_repository.rs  system_repository.rs  user_repository.rs
mtc-api/src/service/: api_service.rs  group_service.rs  migration_service.rs  mod.rs  permissions_service.rs  role_service.rs  schema_service.rs  single_type_service.rs  storage_service.rs  store_service.rs  system_service.rs  user_service.rs
mtc-app/: .gitignore  Cargo.toml  tauri.conf.json
mtc-app/capabilities/: desktop.json  mobile.json
mtc-app/src/: error.rs  lib.rs  main.rs  state.rs
mtc-app/src/commands/: download.rs  get_platform.rs  mod.rs  open_in_browser.rs  set_session.rs
mtc-common/: Cargo.toml
mtc-common/src/: lib.rs
mtc-common/src/consts/: api_endpoints.rs  mod.rs  permissions.rs  roles.rs  session.rs  settings.rs
mtc-common/src/models/: asset.rs  auth_state.rs  content.rs  course_entry.rs  entry.rs  field.rs  field_kind.rs  file_entry.rs  gate_pass.rs  group.rs  group_stat.rs  link_entry.rs  message_kind.rs  mod.rs  pagination.rs  permission.rs  query_uuid.rs  quizzes.rs  role.rs  schema.rs  schema_entry_details.rs  schema_kind.rs  search_idx.rs  search_idx_dto.rs  search_kind.rs  storage_entry.rs  system_info.rs  user.rs  user_details.rs  user_state.rs
mtc-common/src/services/: json_value.rs  mod.rs
mtc-common/src/utils/: json_value.rs
mtc-common/src/validators/: mod.rs  string_validators.rs
mtc-model/: Cargo.toml
mtc-model/src/: api_model.rs  auth_model.rs  field_model.rs  group_model.rs  lib.rs  list_model.rs  pagination_model.rs  permission_model.rs  record_model.rs  role_model.rs  schema_model.rs  slug_title_model.rs  storage_model.rs  store_model.rs  user_details_model.rs  user_model.rs
mtc-model/src/i18n/: en_US.rs  mod.rs  uk_UA.rs
mtc-server/: Cargo.toml
mtc-server/.cargo/: config.toml
mtc-server/src/: main.rs  routes.rs  state.rs  types.rs
mtc-server/src/error/: database.rs  generic.rs  mod.rs  session.rs  smtp.rs
mtc-server/src/handlers/: auth.rs  content.rs  gate_passes.rs  groups.rs  index_html.rs  mod.rs  permissions.rs  quizzes.rs  roles.rs  schemas.rs  storage.rs  sync.rs  system.rs  users.rs
mtc-server/src/js/: sw.js
mtc-server/src/middleware/: headers_check.rs  mod.rs  protected_storage.rs  service_worker.rs  session.rs
mtc-server/src/models/: access.rs  mod.rs  payload.rs
mtc-server/src/provider/: config.rs  database.rs  logger.rs  mod.rs  smtp_client.rs  template.rs
mtc-server/src/repository/: base_repository.rs  content.rs  gate_passes.rs  groups.rs  mod.rs  permissions.rs  quizzes.rs  roles.rs  schemas.rs  search_idx.rs  storage_utils.rs  system.rs  users.rs
mtc-server/src/service/: gate_pass_mail_service.rs  gate_pass_template_service.rs  mod.rs
mtc-server/templates/: gate_pass_back.html  gate_pass_email.html  gate_pass_front.html  gate_pass_print.html
mtc-wasm/: Cargo.toml  Dioxus.toml  build.rs  index.html  input.css
mtc-wasm/.cargo/: config.toml
mtc-wasm/assets/assets/: mtc-cms.js  tailwind.css
mtc-wasm/assets/css/: input.css  wasm-preloader.css
mtc-wasm/assets/html/: gate_pass_back.html  gate_pass_email.html  gate_pass_front.html
mtc-wasm/assets/js/: js_ffi.js  sw.js
mtc-wasm/assets/www/: mtc-cms.js
mtc-wasm/src/: breadcrumbs.rs  layout.rs  main.rs  router.rs
mtc-wasm/src/application/: commands.rs  js_ffi.rs  mod.rs
mtc-wasm/src/components/: access_forbidden.rs  breadcrumbs.rs  content_actions.rs  content_list_actions.rs  dialog_box.rs  editor_actions.rs  entries_actions.rs  entry_info_box.rs  form_checkbox_field.rs  form_date_field.rs  form_entries_field.rs  form_fields_field.rs  form_html_field.rs  form_num_field.rs  form_permissions_field.rs  form_plainhtml_field.rs  form_schema_kind_field.rs  form_select_field.rs  form_text_area_field.rs  form_text_field.rs  form_toggle_field.rs  init_box.rs  loading.rs  menu_item.rs  message_box.rs  mod.rs  pagination.rs  personnel_actions.rs  personnel_columns_chooser.rs  profile_controller.rs  published_action.rs  search_box.rs  something_wrong.rs  storage_actions.rs  storage_box.rs  theme_switcher.rs  user_block_action.rs  view_course_field.rs  view_html_field.rs  view_links_field.rs  (+4 more)
mtc-wasm/src/elements/: footer.rs  header.rs  main_menu.rs  mod.rs  side_menu.rs
mtc-wasm/src/error/: mod.rs
mtc-wasm/src/hooks/: api_client.rs  app_state.rs  auth_state.rs  breadcrumbs.rs  busy.rs  dialog_box.rs  i18n.rs  menu_state.rs  message_box.rs  mod.rs  pages_entries.rs  personnel.rs  personnel_columns.rs  search_engine.rs
mtc-wasm/src/icons/: alert.rs  arrow_up.rs  back.rs  back_side.rs  ban.rs  block.rs  book.rs  camera.rs  cancel.rs  close.rs  columns.rs  copy.rs  database.rs  database_lock.rs  description.rs  diagram3.rs  download.rs  email.rs  error.rs  eye.rs  file.rs  (+52 more)
mtc-web/: Cargo.toml  Dioxus.toml  index.html  input.css
mtc-web/assets/: mtc-cms.js  tailwind.css
mtc-web/src/: global_signal.rs  main.rs  router.rs  state.rs
(+262 files in other folders)
