[workspace]
resolver = "2"
members = ["mtc-common", "mtc-server", "mtc-wasm", "mtc-app", "mtc-ctl"]
default-members = ["mtc-server"]

[workspace.package]
edition = "2021"
version = "0.1.0"
description = "Military Training Center CMS"
authors = ["Anatolii Shliakhto <a.shlyakhto@gmail.com>"]
repository = "https://github.com/AnatoliiShliakhto/mtc-cms"
readme = "README.md"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135" }
serde_repr = { version = "0.1.19" }

thiserror = { version = "2.0.9" }
tokio = { version = "1.42.0", features = ["full"] }
argon2 = { version = "0.6.0-pre.1" }
chrono = { version = "0.4.39" }
dotenv = { version = "0.15.0" }
log = { version = "0.4.22" }
rustls = { version = "0.23.20" }
rand = { version = "0.9.0-beta.1" }
regex = { version = "1.11.1" }
qrcode-generator = { version = "5.0.0" }
uuid = { version = "1.11.0", features = ["v4"] }
magic-crypt = { version = "4.0.1" }
gloo-storage = { version = "0.3.0" }
futures-util = { version = "0.3.31" }
csv = { version = "1.3.1" }
simsearch = { version = "0.2.5" }
human_bytes = { version = "0.4.3" }

surrealdb = { version = "2.1.4", features = ["kv-rocksdb"] }
surrealdb-sql = { version = "1.1.0" }

axum = { version = "0.8.1", features = ["multipart", "macros", "tokio"] }
axum-server = { version = "0.7.1", features = ["tokio-rustls", "rustls-pemfile", "tls-rustls"] }
axum_session = { version = "0.15.0", features = ["key-store", "rest_mode"] }
axum_session_surreal = { version = "0.3.0" }

tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["fs", "cors", "set-header", "compression-full"] }

tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = { version = "0.2.3" }

dioxus = { version = "0.6.1", features = ["web", "router"] }
dioxus-logger = { version = "0.6.1" }
reqwest = { version = "0.12.12", features = ["json", "zstd", "brotli"] }
wasm-bindgen = { version = "0.2.99" }
wasm-bindgen-futures = { version = "0.4.49" }
serde-wasm-bindgen = { version = "0.6.5" }
web-sys = { version = "0.3.76" }
js-sys = { version = "0.3.76" }

tauri = { version = "2.2.0", features = ["rustls-tls"] }
tauri-plugin-shell = { version = "2.2.0" }
tauri-plugin-log = { version = "2.2.0" }
tauri-plugin-dialog = { version = "2.2.0" }
tauri-plugin-http = { version = "2.2.0", features = ["unsafe-headers"] }
tauri-plugin-fs = { version = "2.2.0" }
tauri-plugin-view = { version = "0.0.5" }
tauri-plugin-keep-screen-on = { version = "0.1.4" }
webbrowser = { version = "1.0.3" }

ratatui = { version = "0.30.0-alpha.0" }
ansi-to-tui = { version = "7.0.0" }

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
