[workspace]
resolver = "3"
members = ["mtc-common", "mtc-server", "mtc-wasm", "mtc-app", "mtc-ctl"]
default-members = ["mtc-server"]

[workspace.package]
edition = "2024"
version = "0.1.0"
description = "Military Training Center CMS"
authors = ["Anatolii Shliakhto <a.shlyakhto@gmail.com>"]
repository = "https://github.com/AnatoliiShliakhto/mtc-cms"
readme = "README.md"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
serde_repr = { version = "0.1.20" }

thiserror = { version = "2.0.12" }
tokio = { version = "1.44.2", features = ["full"] }
argon2 = { version = "0.6.0-pre.1" }
chrono = { version = "0.4.40" }
dotenv = { version = "0.15.0" }
log = { version = "0.4.27" }
rustls = { version = "0.23.25" }
rand = { version = "0.9.0" }
regex = { version = "1.11.1" }
qrcode-generator = { version = "5.0.0" }
uuid = { version = "1.16.0", features = ["v4", "js"] }
magic-crypt = { version = "4.0.1" }
gloo-storage = { version = "0.3.0" }
futures-util = { version = "0.3.31" }
csv = { version = "1.3.1" }
simsearch = { version = "0.2.5" }
human_bytes = { version = "0.4.3" }

surrealdb = { version = "2.2.1", features = ["kv-rocksdb"] }

axum = { version = "0.8.3", features = ["multipart", "macros", "tokio"] }
axum-server = { version = "0.7.2", features = ["tokio-rustls", "rustls-pemfile", "tls-rustls"] }
axum_session = { version = "0.16.0", features = ["key-store", "rest_mode"] }
axum_session_surreal = { version = "0.4.0" }

tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["fs", "cors", "set-header", "compression-full"] }

tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = { version = "0.2.3" }

dioxus = { version = "0.6.3", features = ["web", "router"] }
dioxus-logger = { version = "0.6.2" }
reqwest = { version = "0.12.15", features = ["json", "zstd", "brotli"] }
wasm-bindgen = { version = "0.2.100" }
wasm-bindgen-futures = { version = "0.4.50" }
serde-wasm-bindgen = { version = "0.6.5" }
web-sys = { version = "0.3.77" }
js-sys = { version = "0.3.77" }

tauri = { version = "2.4.1", features = ["rustls-tls"] }
tauri-plugin-shell = { version = "2.2.1" }
tauri-plugin-log = { version = "2.3.1" }
tauri-plugin-dialog = { version = "2.2.1" }
tauri-plugin-http = { version = "2.4.3", features = ["unsafe-headers"] }
tauri-plugin-fs = { version = "2.2.1" }
tauri-plugin-view = { version = "0.0.5" }
tauri-plugin-keep-screen-on = { version = "0.1.4" }
webbrowser = { version = "1.0.4" }

ratatui = { version = "0.30.0-alpha.2" }
ansi-to-tui = { version = "7.0.0" }

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
