[package]
name = "mtc-api"
description = "Military training center CMS API"
version = "0.1.0"
edition = "2021"
authors = ["Anatolii Shliakhto <a.shlyakhto@gmail.com>"]
license = "MIT"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.7.5", features = ["multipart", "macros"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "fs"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
dotenvy = { version = "0.15.7" }
axum-extra = { version = "0.9.3", features = ["cookie", "cookie-signed"] }
tower = { version = "0.4.13" }
argon2 = { version = "0.6.0-pre.0" }
serde_json = { version = "1.0.120" }
surrealdb = { version = "1.5.4", features = ["sql2", "kv-speedb"] }
chrono = { version = "0.4.38" }
tower-sessions = { version = "0.12.2", features = ["signed", "private"] }
tower-sessions-surrealdb-store = { version = "0.4.0" }
thiserror = { version = "1.0.62" }
tracing-appender = { version = "0.2.3" }
validator = { version = "0.18.1", features = ["derive"] }
axum-server = { version = "0.6.0", features = ["tokio-rustls", "rustls-pemfile", "tls-rustls"] }
mtc-model = { path = "../mtc-model" }
uuid = { version = "1.10.0", features = ["v4"] }
mime_guess = { version = "2.0.5" }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }