[package]
name = "mtc-app"
description = "MTC-CMS Application"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mtc_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-http = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-view = { workspace = true }
tauri-plugin-keep-screen-on = { workspace = true }
webbrowser = { workspace = true }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = { version = "2.0.1" }

