[package]
name = "mtc-common"
description = "Military training center CMS Model"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
surrealdb-sql = { workspace = true }
chrono = { workspace = true }
