[package]
name = "mtc-common"
description = "Military training center CMS Model"
resolver = "3"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
chrono = { workspace = true }
