[package]
resolver = "2"
name = "mtc-model"
description = "Military training center CMS Model"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.122" }
validator = { version = "0.18.1", features = ["derive"] }
surrealdb-sql = { version = "1.1.0" }