[package]
name = "mtc-server"
description = "Military training center CMS: Server"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
mtc-common = { path = "../mtc-common" }

thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
surrealdb = { workspace = true, features = ["kv-rocksdb"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

axum = { workspace = true, features = ["multipart", "macros", "tokio"] }
axum-server = { workspace = true, features = ["tokio-rustls", "rustls-pemfile", "tls-rustls"] }
axum_session = { workspace = true, features = ["key-store", "rest_mode"] }
axum_session_surreal = { workspace = true }

tower = { workspace = true }
tower-http = { workspace = true, features = ["fs", "cors", "set-header", "compression-full"] }

argon2 = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }

rustls = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
qrcode-generator = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
magic-crypt = { workspace = true }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.68", features = ["vendored"] }