[package]
name = "mtc-server"
description = "Military training center CMS: Server"
resolver = "3"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
mtc-common = { path = "../mtc-common" }
server-macros = { path = "./bin/server-macros" }

thiserror = { workspace = true }
tokio = { workspace = true }
surrealdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }

axum = { workspace = true }
axum-server = { workspace = true }
axum_session = { workspace = true }
axum_session_surreal = { workspace = true }

tower = { workspace = true }
tower-http = { workspace = true }

argon2 = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

rustls = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
lettre = { workspace = true }
qrcode-generator = { workspace = true }
uuid = { workspace = true }
magic-crypt = { workspace = true }
base64 = { workspace = true }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.72", features = ["vendored"] }