[package]
name = "mtc-wasm"
description = "Military training center CMS WebAssembly"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = ["utc242"]
starter = [] #Starter WASM pack
utc242 = [] #242 unit trainig center WASM pack

[dependencies]
mtc-common = { path = "../mtc-common" }
dioxus = { workspace = true, features = ["web", "router"] }
dioxus-logger = { workspace = true }
reqwest = { workspace = true, features = ["json", "cookies", "zstd", "brotli"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
gloo-storage = { workspace = true }
futures-util = { workspace = true }
csv = { workspace = true }
simsearch = { workspace = true }
chrono = { workspace = true }
human_bytes = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
magic-crypt = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = {workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }

