[package]
name = "mtc-wasm"
description = "Military training center CMS WebAssembly"
resolver = "3"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = ["starter"]
starter = [] #Starter WASM pack
utc242 = [] #242 unit trainig center WASM pack

[dependencies]
mtc-common = { path = "../mtc-common" }
dioxus = { workspace = true }
dioxus-logger = { workspace = true }

reqwest = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
gloo-storage = { workspace = true }
csv = { workspace = true }
simsearch = { workspace = true }
chrono = { workspace = true }
human_bytes = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
#getrandom = { version = "0.3.2", features = ["wasm_js"] }

magic-crypt = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }

