[package]
name = "mtc-web"
description="Military training center CMS WebAssembly"
version = "0.1.0"
authors = ["Anatolii Shliakhto <a.shlyakhto@gmail.com>"]
edition = "2021"
license = "MIT"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.1", features = ["web", "router"] }
dioxus-free-icons = { version = "0.8.5", features = ["font-awesome-regular"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.1"
