[package]
resolver = "2"
name = "mtc-web"
description = "Military training center CMS WebAssembly"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mtc-model = { path = "../mtc-model" }

[target.'cfg(all(not(any(windows, unix)), target_family = "wasm"))'.dependencies]
dioxus = { version = "0.5.6", features = ["web", "router"] }
dioxus-free-icons = { version = "0.8.6", features = ["font-awesome-regular", "material-design-icons-action", "material-design-icons-social", "material-design-icons-navigation", "material-design-icons-file", "material-design-icons-editor", "material-design-icons-content", "ionicons"] }
tracing = { version = "0.1.40" }
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = { version = "1.0.122" }
serde = { version = "1.0.205", features = ["derive"] }
futures-util = { version = "0.3.30" }
chrono = { version = "0.4.38" }
dioxus-logger = { version = "0.5.1" }
dioxus-std = { version = "0.5.0", features = ["i18n"] }
gloo-storage = { version = "0.3.0" }
human_bytes = { version = "0.4.3" }